# sagemaker-pipeline

./: .gitignore  README.md
example_code/: requirements.txt
example_code/notebooks/: download_roberta.ipynb  tweet-sentiment-roberta-pytorch.ipynb
example_code/scripts/: pull_base_roberta_model_from_s3.sh  pull_data_from_s3.sh
example_code/src/: infer.py  train.py
sagemaker/: README.md  pyproject.toml
sagemaker/pipelines/: __version__.py  build_and_deploy.ipynb  ml_lineage_viz.ipynb
sagemaker/pipelines/pytorch_nlp/: _repack_model.py  evaluation.py  hp_tune.py  inference.py  lambda_deploy.py  model.py  pipeline.py  preprocessing.py  requirements.txt  train.py
sagemaker/pipelines/tabular_example/: evaluation.py  lambda_deploy.py  pipeline.py  preprocessing.py
