[tool.poetry]
name = "sagemaker-pipeline"
version = "0.0.1"
description = "Sagemaker Pipelines"
authors = ["Minh Nguyen <minh.nguyen@paragonintelligence.co.uk>"]

[tool.poetry.dependencies]
boto3 = "1.20.24"
python = ">=3.8,<3.9"
pandas = "1.1.5"
sagemaker = "2.117.0"
sagemaker-experiments = "0.1.35"
sagemaker-pytorch-training = "2.4.0"
sagemaker-studio-analytics-extension = "0.0.4"
sagemaker-studio-sparkmagic-lib = "0.1.3"
sagemaker-training = "3.9.2"
scipy = "^1.0.0"
seaborn = "0.11.2"
shap = "0.40.0"
torch = "1.8.1"
torchvision = "0.9.1"
transformers = "^4.24.0"
xgboost = "^1.7.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.8.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"